--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -12,6 +12,12 @@
     /* grid-template-columns: 2fr 1fr 1fr 1fr; */
 }
 
+.contactWrapper {
+    @media screen and (max-width: 480px) {
+        width: 100%;
+    }
+}
+
 .heading {
     margin: 30px 0;
 }
@@ -33,4 +39,15 @@
 .footerCopyRight {
     font-size: 14px;
     margin: 40px 0;
+}
+
+.footerInput{
+    width: 70% !important;
+    @media screen and (max-width: 480px) {
+        width: 80% !important;
+    }
+}
+
+.socialIcon {
+    margin-right: 8px;
 }
