--- a/src/app/components/TextInput/TextInput.module.css
+++ b/src/app/components/TextInput/TextInput.module.css
@@ -2,11 +2,12 @@
     background-color: transparent;
     border: 1px solid white;
     color: white;
-    /* padding: 10px 0; */
     border-radius: 24px;
     text-decoration: none;
     display: inline-block;
     transition: color 0.3s ease, border-color 0.3s ease;
+    width: 100%;
+    min-width: 100px;
 }
 
 .input {
@@ -14,6 +15,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
+    width: 100%;
 }
 
 .input:focus {
@@ -24,4 +26,6 @@
     padding: 10px 20px;
     border-radius: 24px;
     color: black;
+    float: right;
+    cursor: pointer;
 }
