--- a/src/app/styles/about-us.module.css
+++ b/src/app/styles/about-us.module.css
@@ -12,16 +12,32 @@
 .aboutUsWrapper {
     display: flex;
     gap: 20px;
+    @media screen and (max-width: 1024px) {
+        flex-direction: column;
+    }
 }
 
 .leftWrapper {
     width: 40%;
+    @media screen and (max-width: 1024px) {
+        width: 100%;
+    }
 }
 
 .rightWrapper {
     width: 60%;
     background-color: var(--dark-green);
     padding: 40px;
+    @media screen and (max-width: 1024px) {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width: 480px) and (max-width: 768px) {
+        padding: 30px;
+    }
+    @media screen and (max-width: 480px) {
+        padding: 20px;
+    }
 }
 
 .rightWrapper h2 {
@@ -38,6 +54,10 @@
     color: var(--gray);
     text-align: center;
     margin: 60px 0;
+    @media screen and (max-width: 480px) {
+        font-size: 30px;
+        margin-top: 20px;
+    }
 }
 
 .logo {
@@ -48,4 +68,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @media screen and (max-width: 768px) {
+        height: 400px;
+    }
 }
