--- a/src/app/styles/contact.module.css
+++ b/src/app/styles/contact.module.css
@@ -12,16 +12,28 @@
 .contactWrapper {
     display: flex;
     gap: 20px;
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 
 .leftWrapper {
     width: 50%;
+    height: 450px;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .rightWrapper {
     width: 50%;
+    height: 450px;
     background-color: var(--dark-green);
     padding: 40px;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        padding: 20px;
+    }
 }
 
 .rightWrapper h2 {
@@ -32,17 +44,9 @@
     line-height: 1.5;
 }
 
-.experience {
-    font-size: 50px;
-    font-weight: 700;
-    color: var(--gray);
-    text-align: center;
-    margin: 60px 0;
-}
-
-.abc {
+.left {
     background-color: var(--dark-green);
-    height: 600px;
+    height: 100%;
     font-size: 70px;
     font-weight: 700;
     display: flex;
@@ -52,4 +56,44 @@
 
 .input {
     width: 100%;
+    margin: 10px auto;
+}
+
+.startProjectButton {
+    margin: 20px auto;
+}
+
+
+
+
+
+
+.calendarContainer {
+    display: flex;
+    justify-content: center;
+    /* Center the calendar horizontally */
+    margin-top: 20px;
+}
+
+.calendar {
+    width: 350px;
+    /* Adjust width as needed */
+    background-color: #f5f5f5;
+    /* Light gray background */
+    border: 1px solid #ddd;
+    /* Light border */
+    border-radius: 4px;
+    /* Rounded corners */
+    font-family: Arial, sans-serif;
+}
+
+/* Other styles following a similar pattern... */
+
+.weekday {
+    /* Inherit styles from react-calendar--day */
+}
+
+.weekend {
+    background-color: #eee;
+    /* Light gray background for weekends */
 }
