--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .main {
-  /* min-height: 100vh; */
+  font-family: "Montserrat", sans-serif;
+  --assistant-color: #f5f5f5;
+  --font-color: #f9f9f9;
+  --heading-color: #f9f9f9;
+  --smooth-color: #f9f9f9;
+  --reverse-color: #f9f9f9;
+  --reverse-heading-color: #fff;
+}
+
+.myClass {
+  height: 1000px;
 }
