--- a/src/app/components/HomeHeader/HomeHeader.module.css
+++ b/src/app/components/HomeHeader/HomeHeader.module.css
@@ -30,12 +30,12 @@
 }
 
 .headerTitle {
-    font-size: 2.5vw;
+    font-size: 3rem;
     font-weight: bolder;
 }
 
 .headerDescription {
-    font-size: 1.2vw;
+    font-size: 1.2rem;
     letter-spacing: 1px;
 }
 
@@ -114,8 +114,14 @@
 }
 
 @media (max-width: 991px) {
-    .hpHeader .hpDown {
+    .hpHeader .hpDown, .object, .down {
         display: none !important;
+    }
+
+    .homeHeader{
+        width: 100% !important;
+        margin-top: 100px;
+        padding: 0 20px;
     }
 }
 
