--- a/src/app/components/ServicesSection/ServicesSection.module.css
+++ b/src/app/components/ServicesSection/ServicesSection.module.css
@@ -1,6 +1,7 @@
 .serviceSectionWrapper {
     background-color: var(--background-color);
     max-height: fit-content;
+    padding-top: 100px;
 }
 
 .titleSubHeading {
