--- a/src/app/components/ServiceCard/ServiceCard.module.css
+++ b/src/app/components/ServiceCard/ServiceCard.module.css
@@ -18,7 +18,7 @@
     width: calc(100% + 100px);
     content: "";
     position: absolute;
-    background-image: linear-gradient(to top, #000000 0%, #555555 100%);
+    background-image: linear-gradient(to top, var(--background-color) 0%, #555555 100%);
     border-radius: 30px 30px 100% 100%;
     transition: all 0.4s ease-out;
     top: 0;
@@ -75,7 +75,7 @@
 
 .card:hover {
     transform: translateY(-10px);
-    box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 5px 10px -5px rgba(1, 6, 11, 0.3);
 }
 
 .card:hover:before {
