--- a/src/app/components/BlogsSection/BlogsSection.module.css
+++ b/src/app/components/BlogsSection/BlogsSection.module.css
@@ -8,3 +8,50 @@
     max-width: 50ch;
     line-height: 1.5;
 }
+
+.blogsWrapper {
+    display: flex;
+    gap: 20px;
+    padding: 20px 0;
+    flex-wrap: wrap;
+}
+
+.blogDiv {
+    width: 340px;
+    border: 1px solid white;
+}
+
+.blogImage {
+    width: 100%;
+    height: 200px;
+    position: relative;
+}
+
+.blogBody {
+    padding: 20px;
+}
+
+.blogAuthor {
+    color: var(--gray);
+}
+
+.blogHeading {
+    margin: 20px 0;
+    color: white;
+}
+
+.blogDescription {
+    color: var(--gray);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+}
+
+.blogReadMoreButton {
+    margin-top: 15px;
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+}
