--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -22,6 +22,10 @@
     margin: 30px 0;
 }
 
+.footerLinks {
+    padding-left: 0 !important;
+}
+
 .footerList {
     list-style: none;
     margin: 12px 0;
