--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
 * {
   padding: 0;
   margin: 0;
-  color: white;
   box-sizing: border-box;
 }
 
@@ -27,4 +26,9 @@
 
 body {
   background-color: var(--background-color) !important;
+}
+
+/* To hide the cancel option in calendar */
+.MuiDialogActions-root {
+  display: none !important;
 }
