--- a/src/app/styles/contact.module.css
+++ b/src/app/styles/contact.module.css
@@ -1,6 +1,7 @@
 .contactSectionWrapper {
     padding: 30px auto;
     background-color: var(--background-color);
+    color: white;
 }
 
 .heading {
@@ -19,7 +20,7 @@
 
 .leftWrapper {
     width: 50%;
-    height: 450px;
+    height: 500px;
     @media screen and (max-width: 768px) {
         width: 100%;
     }
@@ -27,7 +28,6 @@
 
 .rightWrapper {
     width: 50%;
-    height: 450px;
     background-color: var(--dark-green);
     padding: 40px;
     @media screen and (max-width: 768px) {
@@ -52,6 +52,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black !important;    
 }
 
 .input {
@@ -61,39 +62,4 @@
 
 .startProjectButton {
     margin: 20px auto;
-}
-
-
-
-
-
-
-.calendarContainer {
-    display: flex;
-    justify-content: center;
-    /* Center the calendar horizontally */
-    margin-top: 20px;
-}
-
-.calendar {
-    width: 350px;
-    /* Adjust width as needed */
-    background-color: #f5f5f5;
-    /* Light gray background */
-    border: 1px solid #ddd;
-    /* Light border */
-    border-radius: 4px;
-    /* Rounded corners */
-    font-family: Arial, sans-serif;
-}
-
-/* Other styles following a similar pattern... */
-
-.weekday {
-    /* Inherit styles from react-calendar--day */
-}
-
-.weekend {
-    background-color: #eee;
-    /* Light gray background for weekends */
 }
