--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css");
 
 .main {
   font-family: "Montserrat", sans-serif;
@@ -8,4 +9,8 @@
   --smooth-color: #f9f9f9;
   --reverse-color: #f9f9f9;
   --reverse-heading-color: #fff;
+}
+
+.swiper-pagination-bullet {
+  background-color: white !important;
 }
