Added responsive navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 
 :root {
   --background-color: #01060b;
+  --primary-color: #ffffff;
   --secondary-color: #726f6f;
   --gray: #A4A4A4;
   --dark-green: #071522;
