--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -9,24 +9,107 @@
     align-items: center;
 }
 
-.navCenter {
-    width: 30%;
-}
-
 .navLinks {
     display: flex;
-    justify-content: space-between;
+    list-style: none;
+    padding: 0 0.7vw;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
 }
 
 .navList {
+    position: relative;
+    /* margin: 0 20px; */
     list-style: none;
 }
 
 .navList a {
-    color: white;
+    color: silver;
     text-decoration: none;
+    margin: 0 0.7vw;
 }
+
 .navList a:hover {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     cursor: pointer;
+}
+
+.navList a::after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0%;
+    background-color: white;
+    position: absolute;
+    transition: all ease-in-out 250ms;
+    margin: 0 0 0 10%;
+}
+
+.navList a:hover::after {
+    width: 80%;
+}
+
+.hamburger div {
+    width: 30px;
+    height: 3px;
+    background: #f2f5f7;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+.hamburger {
+    display: none;
+}
+
+@media screen and (max-width: 1150px) {
+    .hamburger {
+        display: block;
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top: 7.6%;
+        transform: translate(-5%, -50%);
+        z-index: 100;
+        transition: all 0.7s ease;
+    }
+
+    .navLinks {
+        position: fixed;
+        left: 0;
+        top: 0;
+        background: #131418;
+        height: 100vh;
+        width: 100vw;
+        z-index: 99;
+        flex-direction: column;
+        clip-path: circle(50px at 90% -20%);
+        transition: all 1s ease-out;
+        pointer-events: none;
+    }
+
+    .navLinks li {
+        opacity: 0;
+        padding: 20px 0;
+    }
+
+    .navLinks li:nth-child(1) {
+        transition: all 0.5s ease 0.2s;
+    }
+
+    .navLinks li:nth-child(2) {
+        transition: all 0.5s ease 0.4s;
+    }
+
+    .navLinks li:nth-child(3) {
+        transition: all 0.5s ease 0.6s;
+    }
+
+    .navLinks li:nth-child(4) {
+        transition: all 0.5s ease 0.7s;
+    }
+
+    .navLinks li:nth-child(5) {
+        transition: all 0.5s ease 0.8s;
+    }
 }
