Added new chnages of calender

--- a/src/app/components/ServicesSection/ServicesSection.module.css
+++ b/src/app/components/ServicesSection/ServicesSection.module.css
@@ -23,6 +23,7 @@
 .testimonialGroup {
     background-color: var(--background-color);
     color: white;
+    padding: 30px;
 }
 
 .testimonialGroup h2 {
