--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
   --primary-color: #ffffff;
   --secondary-color: #726f6f;
   --gray: #A4A4A4;
+  --blue: #2369aa;
+  --light-green: #184774;
   --dark-green: #071522;
   --marquee-width: 100vw;
   --marquee-height: 20vh;
