--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -1,7 +1,8 @@
 .footerWrapper {
-    background-color: var(--background-color);
     color: white;
     padding: 20px 0;
+    background-position: center;
+    background-size: cover;
 }
 
 .footer {
