--- a/src/app/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/app/components/SectionWrapper/SectionWrapper.module.css
@@ -1,6 +1,6 @@
 .sectionWrapper {
-    padding: 0 15%;
+    padding: 30px 15%;
     @media screen and (max-width: 768px) {
-        padding: 0 8%;
+        padding: 20px 8%;
     }
 }
