--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -75,7 +75,8 @@
     border-radius: 62.5rem;
     color: #fff;
     line-height: 1.42;
-    text-decoration: none
+    text-decoration: none;
+    background: none !important;
 }
 
 .buttonText {
