--- a/src/app/components/HomeHeader/HomeHeader.module.css
+++ b/src/app/components/HomeHeader/HomeHeader.module.css
@@ -8,7 +8,7 @@
 }
 
 .homeHeadersWrapper {
-    padding: 20vh 0;
+    padding: 20vh 0 10vh 0;
     height: 85vh;
 }
 
@@ -130,6 +130,10 @@
         width: 100% !important;
         margin-top: 100px;
         padding: 0 20px;
+    }
+
+    .homeHeadersWrapper{
+        padding-top: 0px;
     }
 }
 
