--- a/src/app/styles/contact.module.css
+++ b/src/app/styles/contact.module.css
@@ -1,27 +1,43 @@
 .contactSectionWrapper {
     padding: 30px auto;
-    background-color: var(--background-color);
     color: white;
     filter: brightness(10px)
 }
 
 .heading {
-    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+    font-size: 80px;
+    font-style: normal;
     text-align: center;
-    padding: 60px 0;
+    -webkit-text-stroke: 1.5px #fff;
+    opacity: 0.4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    color: transparent;
+    font-family: 'Montserrat-Bold';
+    font-weight: 800;
+    height: 65vh;
 }
 
 .contactWrapper {
     display: flex;
     gap: 20px;
+
     @media screen and (max-width: 768px) {
         flex-direction: column;
     }
 }
 
+.contactSectionWrapper::-webkit-scrollbar{
+    display: none;
+}
+
 .leftWrapper {
     width: 50%;
     height: 500px;
+
     @media screen and (max-width: 768px) {
         width: 100%;
     }
@@ -33,8 +49,8 @@
     align-items: center;
     flex-direction: column;
     width: 50%;
-    background-color: var(--dark-green);
     padding: 40px;
+
     @media screen and (max-width: 768px) {
         width: 100%;
         padding: 20px;
@@ -50,13 +66,12 @@
 }
 
 .left {
-    background-color: var(--dark-green);
     height: 100%;
     font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black !important;    
+    color: black !important;
 }
 
 .input {
