--- a/src/app/components/TextInput/TextInput.module.css
+++ b/src/app/components/TextInput/TextInput.module.css
@@ -3,6 +3,7 @@
     border: 1px solid white;
     color: white;
     border-radius: 24px;
+    overflow: hidden;
     text-decoration: none;
     display: inline-block;
     transition: color 0.3s ease, border-color 0.3s ease;
