--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -5,6 +5,10 @@
     background-size: cover;
 }
 
+.icon{
+    pointer-events: all;
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
